Verbesserung der Resilienz bei Verifikationsfehlern, sowie Verbesserung der UI-Reaktion bei Fehlern

--- a/views/index.html
+++ b/views/index.html
@@ -5,6 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SSL-Zertifikat Checker</title>
     <link rel="stylesheet" href="/static/css/style.css">
+    <style>
+    #result-url a {
+        color: var(--primary-color);
+        text-decoration: none;
+    }
+    #result-url a:hover {
+        text-decoration: underline;
+    }
+</style>
 </head>
 <body>
     <div class="container">
