--- a/views/index.html
+++ b/views/index.html
@@ -61,6 +61,13 @@
                         <div id="result-port" class="value"></div>
                     </div>
                 </div>
+
+                <div id="redirects-section" class="result-section redirects hidden">
+                    <h3>HTTP-Weiterleitungen</h3>
+                    <div id="redirects-list" class="redirects-list">
+                        <div class="no-redirects">Keine Weiterleitungen gefunden</div>
+                    </div>
+                </div>
                 
                 <div class="result-section">
                     <h3>Zertifikatsinformationen</h3>
