--- a/views/index.html
+++ b/views/index.html
@@ -117,6 +117,10 @@
                         <div id="result-days-left" class="value"></div>
                     </div>
                 </div>
+                <div id="cert-logs-section" class="result-section cert-logs hidden">
+                    <h3>Zertifikatsprüfungs-Logs</h3>
+                    <div id="cert-logs-list" class="cert-logs-list"></div>
+                </div>
             </div>
             
             <div id="error-container" class="hidden">
